# prototypical-networks

./: pyproject.toml
scripts/train/few_shot/: trainval.py
src/prototypical_networks/: __init__.py
