[project]
name = "prototypical-networks"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "tqdm>=4.66.5",
    "torchnet>=0.0.4",
    "torch==2.5.1+cu118",
    "torchvision==0.20.1+cu118",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["protonets"]

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
